fix: colors contrast ratio

--- a/css/common.css
+++ b/css/common.css
@@ -2,11 +2,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
-  --primary-color: #683bc9;
-  --primary-hover-color: #5e39ac;
-  --bg-color: #1b1627;
+  --hue-color: 250;
+  --primary-color: hsl(var(--hue-color), 69%, 61%);
+  --primary-color-second: hsl(var(--hue-color), 30%, 8%);
+  --primary-hover-color: hsl(var(--hue-color), 57%, 53%);
+  --primary-color-lighter: hsl(var(--hue-color), 92%, 85%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --text-color-light: hsl(var(--hue-color), 8%, 65%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color), 29%, 16%);
 }
 
 body {
   font-family: "Poppins", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: var(--title-color);
+}
+
+p {
+  color: var(--text-color);
 }
